# voice-intelligence-app

./: ANALYTICS_DOCUMENTATION.md  ANALYTICS_QUICKSTART.md  DESKTOP_BUILD_GUIDE.md  README.md  package.json  pnpm-lock.yaml  tauri.conf.json  todo.md  vite.config.ts  vitest.config.ts
.github/workflows/: build-desktop.yml
client/: index.html
client/src/: App.tsx
client/src/components/: APIManager.tsx  BatchActionsToolbar.tsx  ChatInterface.tsx  ExportPanel.tsx  FavoritesPanel.tsx  LanguageSwitcher.tsx  OfflineIndicator.tsx  (+10 more)
drizzle/: 0001_polite_mongoose.sql  0002_skinny_mariko_yashida.sql  0003_short_viper.sql  0004_chilly_rockslide.sql  0005_chunky_ogun.sql  0006_glorious_xavin.sql  schema.ts
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  _journal.json
scripts/: build-desktop.sh
server/: db-analytics.ts  db-tasks.ts  db.ts  routers.ts
server/_core/: apiAvailability.ts  enrichmentCache.test.ts  enrichmentCache.ts  errorHandler.ts  gracefulDegradation.ts  validation.ts  voiceTranscription.ts
server/routers/: analytics.test.ts  analytics.ts  apiManager.ts  batch.ts  chat.test.ts  chat.ts  favorites.ts  health.test.ts  health.ts  history.test.ts  history.ts  orchestration.ts  scheduler.test.ts  scheduler.ts  settings.test.ts  settings.ts  tasks.test.ts  tasks.ts  transcription.integration.test.ts  transcription.test.ts  transcription.ts
server/services/: schedulerService.ts
src-tauri/: Cargo.toml
src-tauri/src/: hotkey_manager.rs  main.rs
(+32 files in other folders)
