[package]
name = "voice-intelligence"
version = "1.0.0"
description = "Voice Intelligence Desktop App"
authors = ["Voice Intelligence Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.9", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.9", features = ["global-shortcut", "shell-open", "window-all"] }
tauri-plugin-global-shortcut = "2.3"
tauri-plugin-shell = { version = "2.3", features = ["open"] }
tokio = { version = "1", features = ["full"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
